--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       src="https://kit.fontawesome.com/7f03016920.js"
       crossorigin="anonymous"
     ></script>
-    <title>Brainwave</title>
+    <title>Brainwave.io</title>
   </head>
   <body>
     <header>
